tiny tweaks implemented

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -14,7 +14,9 @@ $c-steven: #FFE600;
 //media queries
 $mq-tablet: 768px;
 $mq-s-laptop: 1024px;
-$mq-l-laptop: 1440px;
+// $mq-l-laptop: 1440px;
+// $mq-l-laptop: 1366px;
+$mq-l-laptop: 1280px;
 $mq-desktop: 1920px;
 $mq-4k: 2560px;
 
