animation header icon

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -34,3 +34,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $f-heading;
     font-weight: normal;
 }
+
+.button {
+    &--clean {
+        background-color: transparent;
+        border: none;
+        outline: none;
+    }
+}
