hover on names implemented on home page

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -17,6 +17,7 @@ $mq-s-laptop: 1024px;
 // $mq-l-laptop: 1440px;
 // $mq-l-laptop: 1366px;
 $mq-l-laptop: 1280px;
+$mq-xl-laptop: 1440px;
 $mq-desktop: 1920px;
 $mq-4k: 2560px;
 
