added project intro component

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -6,8 +6,8 @@ $f-body: 'Comfortaa', cursive;
 $c-background: black;
 $c-text: white;
 
-$c-djenna: #0066FF; 
-$c-geert: #BD00FF;
+$c-djenna: #BD00FF;
+$c-geert: #0066FF;
 $c-sanne: #FF5C00;
 $c-steven: #FFE600;
 
