--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -7,6 +7,7 @@ $c-background: black;
 $c-text: white;
 
 $c-djenna: #BD00FF;
+$c-djenna-light: #F2D8E6;
 $c-geert: #0066FF;
 $c-sanne: #FF5C00;
 $c-steven: #FFE600;
