--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -9,7 +9,9 @@ $c-text: white;
 $c-djenna: #BD00FF;
 $c-djenna-light: #F2D8E6;
 $c-geert: #0066FF;
+$c-geert-light: #91ACD3;
 $c-sanne: #FF5C00;
+$c-sanne-light: #DCC5B8;
 $c-steven: #FFE600;
 
 //media queries
