Change color stevy

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -13,8 +13,8 @@ $c-geert-light: #91ACD3;
 $c-sanne: #FF5C00;
 $c-sanne-light: #DCC5B8;
 $c-steven: #FFE600;
-$c-steven-light: FFF380;
-$c-steven-darker: #C9B500;
+$c-steven-light: #FFF380;
+$c-steven-darker: #D4AF37;
 
 //media queries
 $mq-tablet: 768px;
@@ -55,4 +55,3 @@ h1, h2, h3, h4, h5, h6 {
 // @media(min-width: $mq-l-laptop) {}
 // @media(min-width: $mq-xl-laptop) {}
 // @media(min-width: $mq-desktop) {}
-
