--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -34,6 +34,7 @@ $mq-4k: 2560px;
 body {
     font-size: 16px;
     font-family: $f-body;
+    cursor: url("~assets/cursors/cursor-home.png"), auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
